--- a/static/css/stylesheets.css
+++ b/static/css/stylesheets.css
@@ -5,20 +5,25 @@
 }
 
 #container {
-    
+    border-radius: 10px;
     text-align: center;
     margin: 20px auto;
-    width: 500px;
+    width: 90%;
+    max-width: 1300px;
+    min-width: 662px;
     background: lightgrey;
     padding: 30px;
+    box-shadow: 10px 10px 5px #888888;
 
 }
 
 button, select {
-
-    width: 150px;
+    
+    width: 200px;
     height: 50px;
     margin: 20px 0px;
+    border-radius: 10px;
+    background: white;
 }
 
 h2, h3 {
@@ -41,3 +46,63 @@ th, td {
     height: 25px;
 }
 
+#callCenterContainer {
+    background: red;
+    padding: 20px;
+
+}
+
+#inactiveCallContainer {
+    min-height: 150px;
+    background: whitesmoke;
+}
+
+#activeCallsContainer {
+    background: green;
+    min-height: 50px;
+    width: 100%;
+    margin: 10px 0px;
+
+}
+
+#inactiveCallContainer h3 {
+    font-size: initial
+}
+
+
+.phoneCall {
+    height: 75px;
+    display: inline-block;
+    width: 8%;
+    background: purple;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    padding: 10px;
+    min-width: 100px;
+
+}
+
+
+#inactiveCallContainer {font-size: 0;}
+
+#inactiveCallContainer > div {font-size: 1rem; display: inline-block; }
+
+.callGroupContainer {
+    vertical-align: top;
+    min-height: 150px;
+    width: 22%;
+    background: royalblue;
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-right: 2%;
+    margin-bottom: 2%;
+    min-width: 265px;
+}
+
+.conferenceGroup {
+    background: firebrick
+}
+
+.groupHover {
+    background: yellow;
+}
