--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,15 @@
 <div id="container">
     <h2>Phone Call Manager Home Page</h2>
 
-    <button id="startCalls">Start Calls</button>
+    <button id="startAllCalls">Start Calls</button>
     <select id="selectRouting" name="">
         <option value="" disabled selected>Select your routing:</option>
-        <option value="musicMessage">Music</option>
-        <option value="conferenceRoomMessage">Conference Line</option>
+        <option value="musicRoom">Music</option>
+        <option value="confRoom1">Conference Room 1</option>
+        <option value="confRoom1">Conference Room 2</option>
+        <option value="confRoom1">Conference Room 3</option>
     </select>
-    <button id="endCalls">End Calls</button>
+    <button id="endAllCalls">End Calls</button>
 
     <h3>Phone Calls Manager</h3>
     <div id="callCenterContainer">
