--- a/static/css/stylesheets.css
+++ b/static/css/stylesheets.css
@@ -13,7 +13,6 @@
     min-width: 662px;
     background: lightgrey;
     padding: 30px;
-    box-shadow: 10px 10px 5px #888888;
 
 }
 
@@ -47,17 +46,18 @@ th, td {
 }
 
 #callCenterContainer {
-    background: red;
     padding: 20px;
 
 }
 
 #inactiveCallContainer {
+    border-radius: 10px;
     min-height: 150px;
     background: whitesmoke;
 }
 
 #activeCallsContainer {
+    border-radius: 10px;
     background: green;
     min-height: 50px;
     width: 100%;
@@ -71,10 +71,11 @@ th, td {
 
 
 .phoneCall {
+    border-radius: 10px;
     height: 75px;
     display: inline-block;
     width: 8%;
-    background: purple;
+    background: powderblue;
     margin-bottom: 5px;
     margin-right: 5px;
     padding: 10px;
@@ -88,6 +89,7 @@ th, td {
 #inactiveCallContainer > div {font-size: 1rem; display: inline-block; }
 
 .callGroupContainer {
+    border-radius: 10px;
     vertical-align: top;
     min-height: 150px;
     width: 22%;
@@ -105,4 +107,8 @@ th, td {
 
 .groupHover {
     background: yellow;
+}
+
+#container, .callGroupContainer, .phoneCall, #inactiveCallContainer, #activeCallsContainer {
+    box-shadow: 5px 5px 50px #686868;
 }
